[package]
name = "hazel-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.67"

[dependencies]
file-format = "0.15"
chrono = "0.4"
notify = { version = "5", features = ["serde"] } 
regex = "1.7"
snafu = "0.7"
pest = "2"
pest_derive = "2"
mime_guess = "2"
fs_extra = "1"
serde = "1"
serde_yaml = "0.9"
libc = "0.2"
widestring = "1.0"
